updated collections to use toList() rather than Collectors.toList()