@@ -175,7 +175,8 @@ public class Parser {
         return (Oracle) allOraclesContents.get(0).eContents()
                 .stream()
                 .filter(eObject -> eObject instanceof Oracle)
-                .collect(Collectors.toList()).get(0);
+                .toList()
+                .get(0);
     }
 
     /**
@@ -215,7 +216,7 @@ public class Parser {
         List<EObject> varOrClassModifiers = allOracleContents.stream().filter(eo -> eo instanceof VarOrClassModifier && (
                 (((VarOrClassModifier) eo).getClassFieldWithPeriod() != null && ((VarOrClassModifier) eo).getClassFieldWithPeriod().getPeriod() != null) ||
                 (((VarOrClassModifier) eo).getMethodCallWithPeriod() != null && ((VarOrClassModifier) eo).getMethodCallWithPeriod().getPeriod() != null)
-        )).collect(Collectors.toList());
+        )).toList();
         if (varOrClassModifiers.isEmpty()) {
             return null;
         }
@@ -236,7 +237,7 @@ public class Parser {
                     eo -> eo instanceof VarOrClassModifier &&
                     (((VarOrClassModifier) eo).getMethodCallWithPeriod() != null && ((VarOrClassModifier) eo).getMethodCallWithPeriod().getPeriod() != null) &&
                     (((VarOrClassModifier) eo).getMethodCallWithPeriod().getMethodCall().getClosingParenthesis() == null))
-                .collect(Collectors.toList());
+                .toList();
         if (methodModifiers.isEmpty()) {
             return null;
         }
@@ -259,7 +260,7 @@ public class Parser {
                         ((ClauseWithVars) eo).getFirstInstanceOfOperator() != null ||
                         ((ClauseWithVars) eo).getSecondInstanceOfOperator() != null)
                 ).map(eo -> ((ClauseWithVars) eo).getFirstInstanceOfOperator() != null ? "this" : ((ClauseWithVars) eo).getCanEvaluateToPrimitive())
-                .collect(Collectors.toList());
+                .toList();
         if (elementsPrecedingInstanceOf.isEmpty()) {
             return null;
         }
@@ -274,7 +275,7 @@ public class Parser {
         List<CanEvaluateToPrimitive> elementsPrecedingNonEqIneqOp = getAllCanEvalToPrimInEObject(oracle, ClauseWithVars.class)
                 .stream()
                 .filter(eo -> ((ClauseWithVars) eo.eContainer()).getNonEqIneqOperator() != null)
-                .collect(Collectors.toList());
+                .toList();
         if (elementsPrecedingNonEqIneqOp.isEmpty()) {
             return null;
         }
@@ -308,7 +309,7 @@ public class Parser {
                 .stream()
                 .filter(eo -> eo instanceof CanEvaluateToPrimitive && eObjectClass.isInstance(eo.eContainer()))
                 .map(eo -> (CanEvaluateToPrimitive) eo)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -319,7 +320,7 @@ public class Parser {
                 .stream()
                 .filter(eo -> eo instanceof ClauseWithVars)
                 .map(eo -> (ClauseWithVars) eo)
-                .collect(Collectors.toList());
+                .toList();
         if (allClausesWithVars.isEmpty()) {
             return null;
         }
@@ -361,7 +362,7 @@ public class Parser {
                         && ((ClauseTrue)eo).getArrayStreamClauseContinuation() != null
                         && (jdVarExpression == null || compactExpression(split(eo)).contains(compactExpression(jdVarExpression))))
                 .map(eo -> (ClauseTrue) eo)
-                .collect(Collectors.toList());
+                .toList();
 
         if (clauseTruesWithJdVars.isEmpty()) {
             return null;
@@ -406,7 +407,7 @@ public class Parser {
                 .stream()
                 .filter(eo -> eo instanceof VarOrClassModifier)
                 .map(eo -> (VarOrClassModifier) eo)
-                .collect(Collectors.toList());
+                .toList();
 
         // For each VarOrClassModifier, get its parent and keep only the modifiers up to the current one
         for (VarOrClassModifier varOrClassModifier : varOrClassModifiers) {
@@ -538,7 +539,7 @@ public class Parser {
                 .stream()
                 .map(VarOrClassModifier::getMethodCallWithPeriod)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
         if (methodModifiers.isEmpty()) {
             return null;
         }
